<resources>
    <string name="app_name">Heroclix \'em all</string>
    <string name="title_activity_front">Gotta clix \'em all</string>
    <string name="ffs">Fifth Floor Studio</string>
    <string name="logo_cd">An image of the Fifth Floor Studio logo. It\'s a pyramide.</string>
    <string name="about_dialog">Thank you for using Heroclix \'em all to manage your collection.\nPlease take a minute to rate and comment!\n\nThanks to VisibleDucts for all the help.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share_all_have">Share your haves</string>
    <string name="menu_share_all_want">Share your wants</string>
    <string name="menu_share_all_trade">Share your trades</string>
    <string name="menu_share_have">Share your haves</string>
    <string name="menu_share_want">Share your wants</string>
    <string name="menu_share_trade">Share your trades</string>
    <string name="menu_as_list">Show as list</string>
    <string name="menu_search">Search</string>
    <string name="menu_global_search">Global search</string>
    <string name="menu_add_all">Add all to have</string>
    <string name="menu_multi_edit">Multiple edits</string>
    <string name="menu_save_edit">Save edits</string>
    <string name="menu_all">Show all</string>
    <string name="menu_have">Show have</string>
    <string name="menu_want">Show want</string>
    <string name="menu_rest">Show rest</string>
    <string name="menu_modern">Show Modern Age</string>
    <string name="menu_golden">Show Golden Age</string>
    <string name="menu_other">Show Other</string>
    <string name="menu_havewant">See all have and want</string>
    <string name="menu_add_clix">Report clix</string>
	<string name="menu_backup">Backup</string>
    <string name="search_hint">Type your search</string>
    <string name="search_text">Please type in your search in the actionbar</string>
    <string name="search">search</string>
    <string name="global_search">Global Search</string>
    <string name="collection_dialog_have_want">Add have/want</string>
    <string name="collection_dialog_inc_have">Increase have</string>
    <string name="collection_dialog_dec_have">Decrease have</string>
    <string name="collection_dialog_inc_want">Increase want</string>
    <string name="collection_dialog_dec_want">Decrease want</string>
    <string name="collection_dialog_inc_trade">Increase trade</string>
    <string name="collection_dialog_dec_trade">Decrease trade</string>
    <string name="done">Done</string>
    <string name="no_items">Are there missing some clix? Please use the \"Report clix\" menu action.</string>
    <string name="cd_have">You have this figure</string>
    <string name="cd_want">You want this figure</string>
    <string name="cd_have_want_image">Will show if you have or want the figure.</string>
    <string name="collection_have">Have</string>
    <string name="collection_want">Want</string>
    <string name="collection_trade">Trade</string>
    <string name="collection_none">None</string>
    <string name="test_id">000</string>
    <string name="test_name">No name</string>
    <string name="test_keywords">No keywords</string>
    <string name="test_count">0/*</string>
    <string name="test_set">Deadpool Team-Ups</string>
    <string name="have">Image showing that you have the figure</string>
    <string name="star">Image showing that you want the figure</string>
    <string name="havewant">You have and wants</string>
    <string name="add_set">Set:</string>
    <string name="add_id">Collectors #:</string>
    <string name="add_name">Name:</string>
    <string name="add_ta">Team Ability:</string>
    <string name="add_keywords">Keywords:</string>
    <string name="add_points">Points:</string>
    <string name="add_clix">Here you can help update the database by filling out this form and sending it from your e-mail.</string>
    <string name="add_send">Send info</string>
	<string name="make_it_happen">Make it happen</string>
	<string name="import_the_database">Import</string>
	<string name="export_the_database">Export</string>
	<string name="backup_information_export">To export your database to a .txt for storage you check which data you want to store, and then hit export.</string>
	<string name="backup_information_import">\nWhen you want to load a backup you click import and chose your backup file. The backup file needs to be a .txt file, and the data will override any matching data.</string>
	<string name="backup_dialog_title">Choose your file</string>
	<string name="backup_toast_error">Can\'t read or write to local storage</string>
	<string name="backup_header">Set;ID;Have;Want;Trade\n</string>
	<string name="cant_read_file">Can\'t read from the file %1$s</string>
	<string name="database_exported_to">Database exported to %1$s</string>
	<string name="problem_reading_file">There where problems reading from the file %1$s</string>
	<string name="reading_file_complete">Everything went okay when importing data</string>
    <string-array name="json_modern">
        <item>b_wizkids.json</item>
	    <item>m_gotg.json</item>
	    <item>dc_jlsg.json</item>
	    <item>m_gotgm.json</item>
	    <item>dc_wol.json</item>
        <item>m_dofp.json</item>
	    <item>m_ffdp.json</item>
        <item>m_dp.json</item>
	    <item>dc_bmqs.json</item>
        <item>m_catws.json</item>
        <item>dc_fflod.json</item>
        <item>dc_slosh.json</item>
        <item>m_axm.json</item>
        <item>m_iim.json</item>
        <item>dc_bao.json</item>
        <item>m_fi.json</item>
        <item>m_tdw.json</item>
        <item>dc_smqs.json</item>
        <item>dc_bct.json</item>
        <item>m_wxm.json</item>
        <item>dc_mos.json</item>
        <item>dc_tt.json</item>
        <item>dc_fftt</item>
        <item>dc_nml.json</item>
        <item>m_im3.json</item>
        <item>b_tae.json</item>
        <item>dc_gcsg.json</item>
        <item>m_asm.json</item>
        <item>dc_ffsog.json</item>
        <item>dc_sog.json</item>
        <item>dc_bm.json</item>
        <item>dc_ffbm.json</item>
        <item>b_tabapp.json</item>
        <item>dc_d10.json</item>
        <item>m_m10.json</item>
    </string-array>
    <string-array name="json_other">
	    <item>o_rotk.json</item>
        <item>o_ygo.json</item>
        <item>o_hbtdos.json</item>
        <item>o_dota2.json</item>
        <item>o_mkr.json</item>
        <item>o_t2t.json</item>
        <item>o_hbtjlm.json</item>
        <item>o_stts3.json</item>
        <item>o_lr.json</item>
        <item>o_ka2.json</item>
        <item>o_bsi.json</item>
        <item>o_pr.json</item>
        <item>o_fotr.json</item>
        <item>o_im.json</item>
        <item>o_stmg.json</item>
        <item>o_trek2.json</item>
        <item>o_hobbit.json</item>
        <item>o_acb.json</item>
        <item>o_acr.json</item>
        <item>o_sdcc.json</item>
        <item>o_sttat.json</item>
        <item>o_trek.json</item>
        <item>o_lotr.json</item>
        <item>o_halo.json</item>
        <item>o_gow.json</item>
    </string-array>
    <string-array name="json_golden">
	    <item>dc_jl52.json</item>
	    <item>dc_ffjl.json</item>
	    <item>m_ffcw.json</item>
	    <item>m_cw.json</item>
	    <item>dc_dkr.json</item>
	    <item>m_ffgsx.json</item>
	    <item>dc_ffwol.json</item>
	    <item>m_ams.json</item>
	    <item>m_avm.json</item>
	    <item>m_ffgga.json</item>
	    <item>m_gg.json</item>
	    <item>m_ig.json</item>
	    <item>m_ih.json</item>
	    <item>m_ffih.json</item>
	    <item>dc_ffsm.json</item>
	    <item>dc_sm.json</item>
        <item>o_sf.json</item>
        <item>dc_ffwm.json</item>
        <item>m_ca.json</item>
        <item>m_ffhot.json</item>
        <item>dc_ffgl.json</item>
        <item>dc_gfgl.json</item>
        <item>m_gsx.json</item>
        <item>dc_75a.json</item>
        <item>dc_bd.json</item>
        <item>m_wos.json</item>
        <item>m_jh.json</item>
        <item>dc_wm.json</item>
        <item>dc_bn.json</item>
        <item>dc_bb.json</item>
        <item>m_cl.json</item>
        <item>m_hot.json</item>
        <item>dc_aa.json</item>
        <item>m_sec.json</item>
        <item>dc_ba.json</item>
        <item>dc_cr.json</item>
        <item>m_mnm.json</item>
        <item>dc_jl.json</item>
        <item>m_av.json</item>
        <item>dc_ls.json</item>
        <item>o_bprd.json</item>
        <item>dc_ori.json</item>
        <item>m_2099.json</item>
        <item>m_sv.json</item>
        <item>m_dfp.json</item>
        <item>dc_gl.json</item>
        <item>o_iv.json</item>
        <item>dc_gi.json</item>
        <item>m_dr.json</item>
        <item>m_si.json</item>
        <item>dc_cd.json</item>
        <item>m_aw.json</item>
        <item>dc_icons.json</item>
        <item>o_cov.json</item>
        <item>m_ff.json</item>
        <item>dc_lg.json</item>
        <item>o_coh.json</item>
        <item>m_mm.json</item>
        <item>m_ult.json</item>
        <item>dc_unl.json</item>
        <item>m_ui.json</item>
        <item>m_cm.json</item>
        <item>o_indy.json</item>
        <item>dc_cj.json</item>
        <item>m_xp.json</item>
        <item>m_ct.json</item>
        <item>dc_ht.json</item>
        <item>m_ic.json</item>
    </string-array>
    <string-array name="titles_modern">
        <item>WizKids</item>
	    <item>Guardians of the Galaxy</item>
	    <item>Justice League Strategy Game</item>
	    <item>Guardians of the Galaxy Movie</item>
	    <item>War of Light</item>
        <item>X-Men - Days of Future Past</item>
	    <item>Fast Forces: Deadpool</item>
        <item>Deadpool</item>
	    <item>Batman: Arkham Origins Quick-Start Kit</item>
        <item>Captain America - The Winter Soldier</item>
        <item>Fast Forces: The Legion of Doom</item>
        <item>Superman and the Legion of Super-Heroes</item>
        <item>Avengers vs X-Men</item>
        <item>The Invincible Iron Man</item>
        <item>Batman: Arkham Origins</item>
        <item>Fear Itself</item>
        <item>Thor: The Dark World</item>
        <item>Superman Quick-Start Kit</item>
        <item>Batman Classic TV</item>
        <item>Wolverine and X-Men</item>
        <item>Man of Steel</item>
        <item>Teen Titans</item>
        <item>Fast Forces: Teen Titans</item>
        <item>No Man\'s Land</item>
        <item>Iron Man 3</item>
        <item>TabApp Elite</item>
        <item>Batman: Gotham City Strategy Game</item>
        <item>Amazing Spider-Man</item>
        <item>Fast Forces: Streets of Gotham</item>
        <item>Batman: Streets of Gotham</item>
        <item>Batman</item>
        <item>Fast Forces: Batman</item>
        <item>TabApp</item>
        <item>DC HeroClix 10th Anniversary</item>
        <item>Marvel HeroClix 10th Anniversary</item>
    </string-array>
    <string-array name="titles_other">
	    <item>Return of the King</item>
        <item>Yu-Gi-Oh! Heroclix: Series One</item>
        <item>The Hobbit: The Desolation of Smaug</item>
        <item>DOTA 2</item>
        <item>Mage Knight: Resurrection</item>
        <item>The Two Towers</item>
        <item>The Hobbit: Journey to the Lonely Mountain Strategy Game</item>
        <item>Star Trek Tactics 3</item>
        <item>Lone Ranger</item>
        <item>Kick Ass 2</item>
        <item>Bioshock Infinite</item>
        <item>Pacific Rim</item>
        <item>Fellowship of the Ring</item>
        <item>Iron Maiden</item>
        <item>Star Trek: Mini-Game</item>
        <item>Star Trek: Tactics II</item>
        <item>The Hobbit: An Unexpected Journey</item>
        <item>Assasin\'s Creed Brotherhood</item>
        <item>Assasin\'s Creed Revelations</item>
        <item>SDCC Combo-Pack</item>
        <item>Star Trek: Tactics Away Team</item>
        <item>Star Trek: Tactics</item>
        <item>Lord of the Rings</item>
        <item>Halo</item>
        <item>Gears of War</item>
    </string-array>
</resources>