<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/menu_search"
		android:actionViewClass="android.widget.SearchView"
		android:orderInCategory="0"
		android:showAsAction="ifRoom"
		android:title="@string/menu_search"/>
	<item
		android:id="@+id/menu_sync"
		android:orderInCategory="1"
		android:showAsAction="ifRoom"
		android:icon="@android:drawable/ic_popup_sync"
		android:title="@string/menu_sync"/>
	<item
		android:id="@+id/menu_share"
		android:orderInCategory="10"
		android:showAsAction="never"
		android:icon="@android:drawable/ic_menu_share"
		android:title="@string/menu_share"/>
	<item
		android:id="@+id/menu_as_list"
		android:checkable="true"
		android:checked="false"
		android:orderInCategory="20"
		android:showAsAction="never"
		android:title="@string/menu_as_list"/>
	<item
		android:id="@+id/menu_set_all"
		android:orderInCategory="30"
		android:showAsAction="never"
		android:title="@string/menu_all"/>
	<item
		android:id="@+id/menu_modern"
		android:orderInCategory="31"
		android:showAsAction="never"
		android:title="@string/menu_modern"/>
	<item
		android:id="@+id/menu_golden"
		android:orderInCategory="32"
		android:showAsAction="never"
		android:title="@string/menu_golden"/>
	<item
		android:id="@+id/menu_other"
		android:orderInCategory="34"
		android:showAsAction="never"
		android:title="@string/menu_other"/>
	<item
		android:id="@+id/menu_global_search"
		android:icon="@android:drawable/ic_menu_search"
		android:orderInCategory="50"
		android:showAsAction="never"
		android:title="@string/menu_global_search"/>
	<item
		android:id="@+id/menu_add_clix"
		android:orderInCategory="70"
		android:showAsAction="never"
		android:title="@string/menu_add_clix"/>
	<item
		android:id="@+id/menu_backup"
		android:orderInCategory="60"
		android:showAsAction="never"
		android:title="@string/menu_backup"/>
</menu>