<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:paddingRight="15dp"
        android:text="@string/test_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/darkest_gray"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id"
        android:layout_alignBottom="@+id/id"
        android:layout_toRightOf="@+id/id"
        android:text="@string/test_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/check_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:text="@string/collection_have" />

    <CheckBox
        android:id="@+id/check_want"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:text="@string/collection_want" />

</RelativeLayout>