<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_button"
        android:layout_alignParentLeft="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_clix_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_clix"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/add_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_set"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_ta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ta"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_ta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_keywords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_keywords"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_points"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/add_edit_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/holo_orange_light"
        android:onClick="send"
        android:text="@string/add_send"
        android:textStyle="bold" />

</RelativeLayout>